# mro_upstream_template

./: README.md  cookiecutter.json
.github/workflows/: ci.yml  update-prod-version.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .coveragerc  README.md  create-new-mdp-project.sh  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  update-prod-version.yml
{{cookiecutter.repo_name}}/aws/us-east-1/glue-jobs/: INGEST_DATA_TO_S3.glue.json  UPLOAD_DATA_TO_GLUE.glue.json  WRITE_DATA_TO_SNOWFLAKE.glue.json
{{cookiecutter.repo_name}}/aws/us-east-1/glue-metastore/: DUMMY.json
{{cookiecutter.repo_name}}/aws/us-east-1/s3/: s3buckets.json
{{cookiecutter.repo_name}}/aws/us-east-1/schedulers/: ingestion.emr.asl.json.json
{{cookiecutter.repo_name}}/aws/us-east-1/workflows/base_sfn/: _glue_ingest.emr.asl.json
{{cookiecutter.repo_name}}/shared/: emr_bootstrap.sh  sync_users.yml
{{cookiecutter.repo_name}}/snowflake/: conf.json
{{cookiecutter.repo_name}}/snowflake/shared/: V0002__Transformations_warehouse.sql  V0003__RESULTS_and_INTERIM_schemas_and_EMR_user.sql  V0004__create_dummy_table_alteryx.sql  V0005__Grant_privileges_to_read_role.sql
{{cookiecutter.repo_name}}/tests/: test_ingest_to_s3.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/: __main__.py  cli.py
{{cookiecutter.repo_name}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
