[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} {{cookiecutter.email}}"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
requests = "^2.24.0"
boto3 = "^1.14.27"
awsglue-local = "^1.0.2"
{%- if cookiecutter.install_common_utils == "yes" %}
transform-utils = {git = "https://github.com/artexmg/mdp-transform-utils.git", rev="master"}
{%- endif %}
[tool.poetry.dev-dependencies]
black = "^19.10b0"
chispa = "^0.6.0"
coverage = "^5.2"
flake8 = "^3.8.3"
flake8-isort = "^3.0.1"
flake8-junit-report = "^2.1.0"
isort = "^4.3.21"
pre-commit = "^2.6.0"
pyspark = "~2.4.5"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
rope = "^0.17.0"
seed-isort-config = "^2.2.0"
moto = "^1.3.16"
awsglue-local= { version = "^1.0.2", python = "~3.7" }


[tool.black]
line-length = 120

[tool.isort]
line_length = 120
known_first_party = ["app"]
known_third_party = ["awsglue", "boto3", "pyspark"]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
